alot of updates to just general stuff