@@ -8,9 +8,12 @@ import java.io.File;
 import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.Arrays;
+import java.util.List;
 import java.util.Locale;
 
 public class FileManager {
@@ -56,21 +59,22 @@ public class FileManager {
         }
         writeFile(s + "\n" + entry);
     }
-
     //////TBLManager//////
 
     //TODO PLEASE IF U SEE THIS DO THIS PLEASEEEEEEEEE
     public void updateTBLManager(String data) throws IOException {
 
     }
-
-
     public void loadTBLManager(String data) throws IOException {
 
     }
 
     public void createTBLManager(String uName) throws IOException {
-        Files.createFile(Path.of("src/tables/" + uName.toLowerCase(Locale.ROOT) + ".json"));
+       // Files.createFile(Path.of("src/tables/" + uName.toLowerCase(Locale.ROOT) + "Table.json"));
+        byte data[] = "[{\"nTask\": \"Example task name\",\"dTask\": \"Example task description\",\"date\": \"22/22/2003\",\"isCompleated\": false}]".getBytes();
+        Path file = Paths.get("src/tables/" + uName.toLowerCase(Locale.ROOT) + "Table.json");
+        Files.write(file, data);
+
     }
 
 
